--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Basic Information 
-title: Yaoyao Liu
+title: Chao Xu
 position: Assistant Professor
-affiliation: University of Illinois
+affiliation: ShanghaiTech 
 affiliation_link: https://www.illinois.edu/
 affiliation_logo: ./assets/img/illinois.svg
-email: lyy (at) illinois.edu
+email: xuchao1@shanghaitech.edu.cn
 
 # Search Engine Optimization (SEO)
 keywords: yaoyao liu, liu yaoyao, yaoyaoliu, liuyaoyao
